RESOLVED FIXED174651
Minor Node->Element type tightening fixes
https://bugs.webkit.org/show_bug.cgi?id=174651
Summary Minor Node->Element type tightening fixes
Andreas Kling
Reported 2017-07-19 07:36:19 PDT
Accumulated some minor Node* -> Element*/Element& changes while passing through focus code.
Attachments
Patch (6.25 KB, patch)
2017-07-19 07:39 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2017-07-19 07:39:39 PDT
Build Bot
Comment 2 2017-07-19 07:41:39 PDT
Attachment 315919 [details] did not pass style-queue: ERROR: Source/WebCore/editing/Editor.h:404: The parameter name "selection" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3 2017-07-19 22:16:33 PDT
Comment on attachment 315919 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=315919&action=review > Source/WebCore/dom/Document.cpp:386 > + Frame* frame = element.document().frame(); You could use auto* here. > Source/WebCore/editing/Editor.cpp:466 > + Element* target = findEventTargetFromSelection(); You could use auto* here. > Source/WebCore/editing/Editor.cpp:474 > + Element* target = findEventTargetFromSelection(); You could use auto* here. > Source/WebCore/editing/Editor.cpp:782 > + Element* target = findEventTargetFromSelection(); You could use auto* here. > Source/WebCore/editing/Editor.cpp:809 > + Element* target = selection.start().element(); You could use auto* here.
WebKit Commit Bot
Comment 4 2017-07-20 07:37:18 PDT
Comment on attachment 315919 [details] Patch Clearing flags on attachment: 315919 Committed r219685: <http://trac.webkit.org/changeset/219685>
WebKit Commit Bot
Comment 5 2017-07-20 07:37:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.