Minor Node->Element type tightening fixes https://bugs.webkit.org/show_bug.cgi?id=174651

Reviewed by Sam Weinig.

Tighten up some Node* into Element* or even better, Element&.

* dom/Document.cpp:
(WebCore::acceptsEditingFocus): Take a const Element&.
(WebCore::Document::setFocusedElement):
* editing/Editor.cpp:
(WebCore::Editor::findEventTargetFrom): Return an Element*.
(WebCore::Editor::findEventTargetFromSelection): Ditto.
(WebCore::Editor::pasteAsPlainText):
(WebCore::Editor::pasteAsFragment):
(WebCore::Editor::dispatchCPPEvent):
* editing/Editor.h:
* page/DragController.cpp:
(WebCore::DragController::dispatchTextInputEventFor):


Canonical link: https://commits.webkit.org/191494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219685 268f45cc-cd09-0410-ab3c-d52691b4dbfc